--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "appwrite": "^13.0.0",
     "next": "14.0.0",
     "react": "^18",
     "react-avatar": "^5.0.3",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
