--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.0",
     "react": "^18",
     "react-avatar": "^5.0.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
