--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.0",
     "react": "^18",
     "react-avatar": "^5.0.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "zustand": "^4.4.6"
   },
@@ -23,9 +24,9 @@
     "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "openai": "^3.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "openai": "^3.2.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
